persist redux store in web storage

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-toast-notifications": "^2.2.4",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
