add axios wrapper for to-do backend API

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,10 @@
 # more info -> https://create-react-app.dev/docs/adding-custom-environment-variables
 
 # Google API Client ID -> https://console.developers.google.com
-REACT_APP_GOOGLE_API_CLIENT_ID = id
+REACT_APP_GOOGLE_API_CLIENT_ID = 'id'
+
+# React To-Do host IP address
+REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
+
+# React To-DO host PORT number
+REACT_APP_TODO_BACKEND_PORT = '8080'
