--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lint-staged": "^9.2.5",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "sass-lint": "^1.13.1"
   }
 }
