--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"**/*.{js,jsx}\""
+    "format": "prettier --write \"**/*.{js,jsx}\"",
+    "sass-lint": "sass-lint -v -q",
+    "sass-lint:fix": "sass-lint-auto-fix"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,11 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "yarn lint:fix",
+      "git add"
+    ],
+    "*.{sass}": [
+      "yarn sass-lint:fix",
+      "yarn sass-lint",
       "git add"
     ]
   },
@@ -67,6 +74,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "redux-devtools-extension": "^2.13.8",
-    "sass-lint": "^1.13.1"
+    "sass-lint": "^1.13.1",
+    "sass-lint-auto-fix": "^0.17.0"
   }
 }
