--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.5",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
