--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "i18next": "^17.0.18",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.5",
+    "react-i18next": "^10.13.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
