--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
 
 # React To-DO host PORT number
 REACT_APP_TODO_BACKEND_PORT = '8080'
+
+# Default fallback locale ['en', 'cs']
+REACT_APP_DEFAULT_LOCALE = 'en'
