--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-google-login": "^5.0.5",
     "react-i18next": "^10.13.1",
     "react-lottie": "^1.2.3",
+    "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
