--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "i18next": "^17.0.18",
     "jsonwebtoken": "^8.5.1",
