--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "lint-staged": "^9.2.5",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
+    "react-test-renderer": "16.8.6",
     "redux-devtools-extension": "^2.13.8",
     "sass-lint": "^1.13.1",
     "sass-lint-auto-fix": "^0.17.0"
