--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
   "devDependencies": {
     "canvas": "^2.6.0",
     "codecov": "^3.6.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.5",
