--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
       "git add"
     ]
   },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
