--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "4.0.3",
     "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0"
@@ -78,7 +78,6 @@
     ]
   },
   "devDependencies": {
-    "canvas": "^2.6.0",
     "codecov": "^3.6.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -87,10 +86,10 @@
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
-    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "react-test-renderer": "16.8.6",
     "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.51.0",
     "sass-lint": "^1.13.1",
     "sass-lint-auto-fix": "^0.17.0"
   }
