--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,6 @@ jobs:
         with:
           node-version: '12.x'
       - name: Install dependencies
-        run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+        run: yarn install
+      - run: yarn build --if-present
+      - run: yarn test
