--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     ]
   },
   "devDependencies": {
+    "canvas": "^2.9.1",
     "codecov": "^3.6.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
