--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,3 +13,8 @@ jobs:
         run: yarn install
       - run: yarn build --if-present
       - run: yarn test
+          env:
+            REACT_APP_GOOGLE_API_CLIENT_ID: ${{ secrets.REACT_APP_GOOGLE_API_CLIENT_ID }}
+            REACT_APP_TODO_BACKEND_HOST: ${{ secrets.REACT_APP_TODO_BACKEND_HOST }}
+            REACT_APP_TODO_BACKEND_PORT: ${{ secrets.REACT_APP_TODO_BACKEND_PORT }}
+            REACT_APP_DEFAULT_LOCALE: ${{ secrets.REACT_APP_DEFAULT_LOCALE }}
