add names to the steps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,6 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      REACT_APP_GOOGLE_API_CLIENT_ID: ${{ secrets.REACT_APP_GOOGLE_API_CLIENT_ID }}
-      REACT_APP_TODO_BACKEND_HOST: ${{ secrets.REACT_APP_TODO_BACKEND_HOST }}
-      REACT_APP_TODO_BACKEND_PORT: ${{ secrets.REACT_APP_TODO_BACKEND_PORT }}
-      REACT_APP_DEFAULT_LOCALE: ${{ secrets.REACT_APP_DEFAULT_LOCALE }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js
@@ -16,5 +11,12 @@ jobs:
           node-version: '12.x'
       - name: Install dependencies
         run: yarn install
-      - run: yarn build --if-present
-      - run: yarn test
+      - name: build
+        run: yarn build --if-present
+      - name: test
+        run: yarn test
+        env:
+          REACT_APP_GOOGLE_API_CLIENT_ID: ${{ secrets.REACT_APP_GOOGLE_API_CLIENT_ID }}
+          REACT_APP_TODO_BACKEND_HOST: ${{ secrets.REACT_APP_TODO_BACKEND_HOST }}
+          REACT_APP_TODO_BACKEND_PORT: ${{ secrets.REACT_APP_TODO_BACKEND_PORT }}
+          REACT_APP_DEFAULT_LOCALE: ${{ secrets.REACT_APP_DEFAULT_LOCALE }}
