--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -6,7 +6,7 @@ env:
   REACT_APP_TODO_BACKEND_PORT: ${{ secrets.REACT_APP_TODO_BACKEND_PORT }}
   REACT_APP_DEFAULT_LOCALE: ${{ secrets.REACT_APP_DEFAULT_LOCALE }}
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,5 +18,9 @@ jobs:
         run: yarn install
       - name: build
         run: yarn build --if-present
-      - name: test
-        run: yarn test
+      - name: tests with coverage
+        run: yarn test:coverage
+      - name: Codecov
+        uses: codecov/codecov-action@v3.1.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
