--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ REACT_APP_TODO_BACKEND_PORT = '8080'
 
 # Default fallback locale ['en', 'cs']
 REACT_APP_DEFAULT_LOCALE = 'en'
+
+# Default theme ['light', 'dark']
+REACT_APP_DEFAULT_THEME = 'light'
