--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "i18next": "^21.8.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-google-login": "^5.0.5",
-    "react-i18next": "^10.13.1",
+    "react-google-login": "^5.2.2",
+    "react-i18next": "^11.16.9",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0"
   },
@@ -34,16 +34,16 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.5",
-    "lint-staged": "^9.2.5",
-    "prettier": "^1.18.2",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
     "react-test-renderer": "16.8.6",
     "redux-devtools-extension": "^2.13.8",
-    "sass": "^1.51.0",
+    "sass": "^1.52.1",
     "sass-lint": "^1.13.1",
-    "sass-lint-auto-fix": "^0.19.0"
+    "sass-lint-auto-fix": "^0.21.2"
   },
   "eslintConfig": {
     "extends": [
