--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "eject": "react-scripts eject",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
-    "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
+    "lint": "eslint \"src/**/*.{js,jsx,json}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx,json}\" --fix",
     "format": "prettier --write \"**/*.{js,jsx}\"",
     "sass-lint": "sass-lint -v -q",
-    "sass-lint:fix": "sass-lint-auto-fix"
+    "sass-lint:fix": "sass-lint-auto-fix",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -35,7 +37,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "16.8.6",
@@ -50,15 +52,10 @@
       "prettier"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{js,jsx}": [
       "prettier --write",
-      "eslint --fix",
+      "eslint",
       "git add"
     ],
     "*.{sass}": [
