--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "prettier": "^2.6.2",
     "react-test-renderer": "16.8.6",
     "redux-devtools-extension": "^2.13.8",
-    "sass": "^1.52.1",
-    "sass-lint": "^1.13.1"
+    "sass": "^1.52.1"
   },
   "eslintConfig": {
     "extends": [
@@ -50,10 +49,6 @@
     "*.{js,jsx}": [
       "prettier --write",
       "eslint",
-      "git add"
-    ],
-    "*.sass": [
-      "sass-lint -v -q",
       "git add"
     ]
   },
