--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.0",
     "lint-staged": "^12.4.1",
+    "postcss-sass": "^0.5.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "16.8.6",
     "redux-devtools-extension": "^2.13.8",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "stylelint": "^14.8.3",
+    "stylelint-color-format": "^1.1.0",
+    "stylelint-config-standard": "^25.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +53,10 @@
     "*.{js,jsx}": [
       "prettier --write",
       "eslint",
+      "git add"
+    ],
+    "*.{sass}": [
+      "stylelint",
       "git add"
     ]
   },
