--- a/.env.test
+++ b/.env.test
@@ -9,3 +9,6 @@ REACT_APP_TODO_BACKEND_PORT = '8081'
 
 # Default fallback locale ['en', 'cs']
 REACT_APP_DEFAULT_LOCALE = 'en'
+
+# Default theme ['light', 'dark']
+REACT_APP_DEFAULT_THEME = 'light'
