--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.16.9",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
