--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.2.0",
-    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.0.4",
-    "redux-persist": "^6.0.0"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
@@ -36,7 +33,6 @@
     "postcss-sass": "^0.5.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "16.8.6",
-    "redux-devtools-extension": "^2.13.8",
     "sass": "^1.52.1",
     "stylelint": "^14.8.3",
     "stylelint-color-format": "^1.1.0",
