implement auth0 authentication

--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,12 @@
-# Google API Client ID -> https://console.developers.google.com
-REACT_APP_GOOGLE_API_CLIENT_ID = 'test.apps.googleusercontent.com'
-
-# React To-Do host IP address
-REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
-
-# React To-DO host PORT number
-REACT_APP_TODO_BACKEND_PORT = '8081'
-
 # Default theme ['light', 'dark']
 REACT_APP_DEFAULT_THEME = 'light'
+
+# auth0 authentication domain
+REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
+# auth0 authentication client id
+REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
+
+# React todo server IP address
+REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
+# React todo server PORT number
+REACT_APP_TODO_BACKEND_PORT = '8080'
