--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 # template for dotenv file - create your own .env file in root folder with all specified variables
 # more info -> https://create-react-app.dev/docs/adding-custom-environment-variables
 
-# Google API Client ID -> https://console.developers.google.com
-REACT_APP_GOOGLE_API_CLIENT_ID = 'id'
-
-# React To-Do host IP address
-REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
-
-# React To-DO host PORT number
-REACT_APP_TODO_BACKEND_PORT = '8080'
-
 # Default theme ['light', 'dark']
 REACT_APP_DEFAULT_THEME = 'light'
+
+# auth0 authentication domain
+REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
+# auth0 authentication client id
+REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
+
+# React todo server IP address
+REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
+# React todo server PORT number
+REACT_APP_TODO_BACKEND_PORT = '8080'
