--- a/.env.test
+++ b/.env.test
@@ -6,7 +6,6 @@ REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
 # auth0 authentication client id
 REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
 
-# React todo server IP address
-REACT_APP_TODO_BACKEND_HOST = 'http://localhost'
-# React todo server PORT number
-REACT_APP_TODO_BACKEND_PORT = '8080'
+# React todo API url
+REACT_APP_TODO_API_URL = 'http://localhost:8080/api'
+
