--- a/package.json
+++ b/package.json
@@ -13,15 +13,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "debounce": "^1.2.1",
-    "framer-motion": "^6.3.11",
-    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hot-toast": "^2.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1"
@@ -30,12 +23,7 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
-    "postcss-sass": "^0.5.0",
-    "prettier": "^2.6.2",
-    "sass": "^1.52.1",
-    "stylelint": "^14.8.5",
-    "stylelint-color-format": "^1.1.0",
-    "stylelint-config-standard": "^25.0.0"
+    "prettier": "^2.6.2"
   },
   "eslintConfig": {
     "extends": [
