add typescript to project

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # template for dotenv file - create your own .env file in root folder with all specified variables
 # more info -> https://create-react-app.dev/docs/adding-custom-environment-variables
 
-# auth0 authentication domain
+# Authentication
 REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
-# auth0 authentication client id
 REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
+REACT_APP_AUTH_AUDIENCE = "todo-server"
 
-# React todo API url
+# Backend URL
 REACT_APP_TODO_API_URL = 'http://localhost:8080/api'
