--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,7 @@
-# auth0 authentication domain
+# Authentication
 REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
-# auth0 authentication client id
 REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
+REACT_APP_AUTH_AUDIENCE = "auth-audience"
 
-# React todo API url
+# Backend URL
 REACT_APP_TODO_API_URL = 'http://localhost:8080/api'
-
