--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.6.0",
