--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,7 @@
 env:
   browser: true
   es2021: true
+  node: true
 extends:
   - eslint:recommended
   - plugin:react/recommended
@@ -12,7 +13,12 @@ parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+settings:
+  react:
+    version: '18.2'
 plugins:
   - react
   - "@typescript-eslint"
 rules: {}
+ignorePatterns:
+  - build
