--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "eslint-plugin-react": "^7.32.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "tsc-files": "^1.1.3"
   },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint",
-      "git add"
+      "eslint --max-warnings=0",
+      "tsc-files --p tsconfig.json --noEmit"
     ]
   },
   "browserslist": {
