--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
