--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "tsc-files": "^1.1.3"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js, jsx}": [
+      "prettier --write",
+      "eslint --max-warnings=0"
+    ],
+    "*.{ts,tsx}": [
       "prettier --write",
       "eslint --max-warnings=0",
       "tsc-files --p tsconfig.json --noEmit"
