--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tsc-files": "^1.1.3"
   },
   "lint-staged": {
