--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
+    "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.23.0",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
@@ -26,7 +27,8 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.2",
