rename REACT_APP_TODO_API_URL variable to REACT_APP_BACKEND_API_URL

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
 REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
 REACT_APP_AUTH_AUDIENCE = "todo-server"
 
-# Backend URL
-REACT_APP_TODO_API_URL = 'http://localhost:8080/api'
+# Backend URL -> https://tusks.fly.dev/api | http://localhost:8080/api
+REACT_APP_BACKEND_API_URL = 'http://localhost:8080/api'
