--- a/.env.test
+++ b/.env.test
@@ -4,4 +4,4 @@ REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
 REACT_APP_AUTH_AUDIENCE = "auth-audience"
 
 # Backend URL
-REACT_APP_TODO_API_URL = 'http://localhost:8080/api'
+REACT_APP_BACKEND_API_URL = 'http://localhost:8080/api'
