--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.23.0",
     "@types/jest": "^29.2.6",
@@ -24,7 +27,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.4",
