--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memo",
+  "name": "tusks",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
@@ -35,16 +37,24 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.16",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-storybook": "^0.6.10",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "tsc-files": "^1.1.3"
+    "tsc-files": "^1.1.3",
+    "webpack": "^5.75.0"
   },
   "lint-staged": {
     "*.{js,jsx}": [
