--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,7 +8,11 @@ extends:
   - plugin:@typescript-eslint/recommended
   - prettier
   - plugin:react/jsx-runtime
-overrides: []
+overrides: 
+  - files: 
+    - "**/*.stories.*"
+    rules:
+      import/no-anonymous-default-export: 'off'
 parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
