update manifest.json and package.json files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Memo",
-  "name": "Memo",
+  "short_name": "Tusks",
+  "name": "Tusks",
   "icons": [
     {
       "src": "favicon.ico",
