migrate CRA project to Vite

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 # Authentication
-REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
-REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
-REACT_APP_AUTH_AUDIENCE = "auth-audience"
+VITE_AUTH_DOMAIN = "domain.eu.auth0.com"
+VITE_AUTH_CLIENT_ID = "auth-client-id"
+VITE_AUTH_AUDIENCE = "auth-audience"
 
 # Backend URL
-REACT_APP_BACKEND_API_URL = 'http://localhost:8080/api'
+VITE_BACKEND_API_URL = 'http://localhost:8080/api'
