--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 # more info -> https://create-react-app.dev/docs/adding-custom-environment-variables
 
 # Authentication
-REACT_APP_AUTH_DOMAIN = "domain.eu.auth0.com"
-REACT_APP_AUTH_CLIENT_ID = "auth-client-id"
-REACT_APP_AUTH_AUDIENCE = "todo-server"
+VITE_AUTH_DOMAIN = "domain.eu.auth0.com"
+VITE_AUTH_CLIENT_ID = "auth-client-id"
+VITE_AUTH_AUDIENCE = "todo-server"
 
 # Backend URL -> https://tusks.fly.dev/api | http://localhost:8080/api
-REACT_APP_BACKEND_API_URL = 'http://localhost:8080/api'
+VITE_BACKEND_API_URL = 'http://localhost:8080/api'
