--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "prepare": "husky install",
     "pre-commit": "lint-staged",
     "storybook": "start-storybook -p 6006 -s public",
@@ -31,9 +29,7 @@
     "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -45,6 +41,7 @@
     "@storybook/react": "^6.5.16",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.1",
@@ -54,6 +51,9 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tsc-files": "^1.1.3",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vite-tsconfig-paths": "^4.0.5",
     "webpack": "^5.75.0"
   },
   "lint-staged": {
