--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,6 @@
     "baseUrl": "./src",
     "outDir": "build"
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src"],
   "exclude": ["node_modules", "build"]
 }
