--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.7.0",
-    "tailwindcss": "^3.2.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -42,14 +41,17 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-storybook": "^0.6.10",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "tailwindcss": "^3.2.7",
     "tsc-files": "^1.1.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
