--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
-  publish = "build"
-  command = "CI= npm run build"
+  publish = "dist"
+  command = "npm run build"
 
 [[redirects]]
   from = "/*"
