--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tsc-files": "^1.1.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
+    "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5",
     "webpack": "^5.75.0"
   },
