--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.5",
     "clsx": "^1.2.1",
+    "colorjs.io": "^0.5.2",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
