--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0",
+    "tailwind-merge": "^2.6.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
