--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
@@ -60,7 +60,7 @@
     "tsc-files": "^1.1.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
-    "vite-plugin-svgr": "^2.4.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^4.0.5",
     "webpack": "^5.76.0"
   },
