--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,24 @@
 {
-  "short_name": "Tusks",
-  "name": "Tusks",
+  "theme_color": "#000000",
+  "background_color": "#ffffff",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "purpose": "maskable",
+      "sizes": "512x512",
+      "src": "icon_maskable.png",
+      "type": "image/png"
+    },
+    {
+      "purpose": "any",
+      "sizes": "512x512",
+      "src": "icon_rounded.png",
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "orientation": "any",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "dir": "auto",
+  "lang": "en-US",
+  "name": "Tusks",
+  "short_name": "Tusks"
 }
