--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,17 @@
 {
-  "theme_color": "#000000",
+  "theme_color": "#8936FF",
   "background_color": "#ffffff",
   "icons": [
     {
       "purpose": "maskable",
       "sizes": "512x512",
-      "src": "icon_maskable.png",
+      "src": "icon512_maskable.png",
       "type": "image/png"
     },
     {
       "purpose": "any",
       "sizes": "512x512",
-      "src": "icon_rounded.png",
+      "src": "icon512_rounded.png",
       "type": "image/png"
     }
   ],
@@ -20,5 +20,7 @@
   "dir": "auto",
   "lang": "en-US",
   "name": "Tusks",
-  "short_name": "Tusks"
+  "short_name": "Tusks",
+  "start_url": "/",
+  "description": "Everyday task manager. Stay organized and keep track of what matters."
 }
