add doppler dependency for .env file management

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pre-commit": "lint-staged",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "sync-env": "doppler secrets download --format=env --no-file > .env"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
