--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tusks",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -46,7 +47,7 @@
     "@tanstack/react-query-devtools": "^4.28.0",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
@@ -60,9 +61,9 @@
     "tailwindcss": "^3.2.7",
     "tsc-files": "^1.1.3",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
+    "vite": "^6.3.5",
     "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^4.0.5",
+    "vite-tsconfig-paths": "^5.1.4",
     "webpack": "^5.76.0"
   },
   "lint-staged": {
