--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-storybook": "storybook build",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "sync-env": "doppler secrets download --format=env --no-file > .env"
+    "sync-env": "doppler secrets download --format=env --no-file > .env",
+    "check": "prettier --write . && tsc && eslint ."
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
@@ -19,22 +20,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@hookform/resolvers": "^2.9.10",
+    "@hookform/resolvers": "^5.1.1",
     "@tanstack/react-query": "^4.23.0",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "axios": "^1.2.5",
-    "clsx": "^1.2.1",
+    "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "colorjs.io": "^0.5.2",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.42.1",
+    "react-hook-form": "^7.58.1",
     "react-router-dom": "^6.7.0",
     "tailwind-merge": "^2.6.0",
-    "yup": "^0.32.11"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@storybook/addon-docs": "9.0.12",
@@ -44,7 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.5.2",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -57,7 +58,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^3.2.7",
-    "tsc-files": "^1.1.3",
+    "tsc-files": "^1.1.4",
     "typescript": "^4.9.5",
     "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1",
