--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.1",
     "react-router-dom": "^6.7.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@storybook/addon-docs": "9.0.12",
     "@storybook/addon-links": "^9.0.12",
     "@storybook/react-vite": "^9.0.12",
+    "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query-devtools": "^4.28.0",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.5.2",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -54,10 +54,9 @@
     "eslint-plugin-storybook": "^9.0.12",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "postcss": "^8.4.21",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.13",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^4.1.10",
     "tsc-files": "^1.1.4",
     "typescript": "^4.9.5",
     "vite": "^6.3.5",
