--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.1.1",
     "@tanstack/react-query": "^5.81.0",
+    "@tanstack/react-router": "^1.121.27",
+    "@tanstack/react-router-devtools": "^1.121.27",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
@@ -33,7 +35,6 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
-    "react-router-dom": "^6.7.0",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
@@ -43,6 +44,7 @@
     "@storybook/react-vite": "^9.0.12",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query-devtools": "^5.81.0",
+    "@tanstack/router-plugin": "^1.121.29",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.5.2",
